# mysql-perf-testing

./: .env.example  .gitignore  .mise.toml  README.md  docker-compose.yml  pyproject.toml
mysql_perf/: __init__.py  benchmark.py  config.py  db.py  seed.py  targets.py
